Restore from farao-core branch
Signed-off-by: Thomas Bouquet <thomas.bouquet@rte-france.com>